# react-native-env-js

./: CONTRIBUTING.md  EnvJs.h  EnvJs.m  EnvJsHostObject.h  JSIUtils.h  JSIUtils.mm  LICENSE  README.md  package.json  react-native-env-js.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: react-native-env-js.cpp
android/src/main/cpp/java-bindings/: JEnvJs.cpp  JEnvJs.h
android/src/main/java/com/reactnativeenvjs/: EnvJs.java  EnvJsModule.java  EnvJsPackage.java
cpp/: react-native-env-js.cpp  react-native-env-js.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativeenvjs/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativeenvjs/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/EnvJsExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/EnvJsExample.xcodeproj/: project.pbxproj
example/ios/EnvJsExample.xcodeproj/xcshareddata/xcschemes/: EnvJsExample.xcscheme
example/ios/EnvJsExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: EnvJs.h  EnvJs.mm  EnvJsHostObject.mm  EnvJsModule.h  EnvJsModule.mm
ios/EnvJs.xcodeproj/: project.pbxproj
src/: index.tsx  types.ts
